parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement
Rule 2     statement -> assignment
Rule 3     statement -> conditional
Rule 4     statement -> expression
Rule 5     conditional -> IF LPAREN comparison RPAREN OPEN_CURLY statements CLOSE_CURLY
Rule 6     conditional -> IF LPAREN comparison RPAREN OPEN_CURLY statements CLOSE_CURLY ELSE OPEN_CURLY statements CLOSE_CURLY
Rule 7     assignment -> VARIABLE LBRACK expression RBRACK EQUAL expression
Rule 8     assignment -> VARIABLE EQUAL expression
Rule 9     assignment -> VARIABLE EQUAL flow
Rule 10    comparison -> expression GREATER expression
Rule 11    comparison -> expression LESS expression
Rule 12    comparison -> expression GREATER_EQUAL expression
Rule 13    comparison -> expression LESS_EQUAL expression
Rule 14    comparison -> expression EQUAL_EQUAL expression
Rule 15    comparison -> expression NOT_EQUAL expression
Rule 16    flow -> VARIABLE CONNECT flow_functions
Rule 17    flow_functions -> flow_function_call CONNECT flow_functions
Rule 18    flow_functions -> flow_function_call
Rule 19    flow_function_call -> VARIABLE LPAREN params RPAREN
Rule 20    expression -> expression PLUS term
Rule 21    expression -> expression MINUS term
Rule 22    expression -> term
Rule 23    expression -> string
Rule 24    string -> STRING
Rule 25    expression -> NONE
Rule 26    term -> exponent
Rule 27    term -> term TIMES exponent
Rule 28    term -> term DIV exponent
Rule 29    exponent -> factor
Rule 30    exponent -> factor EXP factor
Rule 31    factor -> NUMBER
Rule 32    factor -> VARIABLE
Rule 33    factor -> LPAREN expression RPAREN
Rule 34    factor -> list
Rule 35    factor -> list_empty
Rule 36    list_empty -> LBRACK RBRACK
Rule 37    list -> LBRACK list_elements RBRACK
Rule 38    list_elements -> list_elements COMMA expression
Rule 39    list_elements -> expression
Rule 40    index -> VARIABLE LBRACK expression RBRACK
Rule 41    factor -> function_call
Rule 42    factor -> index
Rule 43    function_call -> VARIABLE LPAREN RPAREN
Rule 44    function_call -> VARIABLE LPAREN params RPAREN
Rule 45    params -> params COMMA expression
Rule 46    params -> expression

Terminals, with rules where they appear

CLOSE_CURLY          : 5 6 6
COMMA                : 38 45
CONNECT              : 16 17
DIV                  : 28
ELSE                 : 6
EQUAL                : 7 8 9
EQUAL_EQUAL          : 14
EXP                  : 30
GREATER              : 10
GREATER_EQUAL        : 12
IF                   : 5 6
LBRACK               : 7 36 37 40
LESS                 : 11
LESS_EQUAL           : 13
LPAREN               : 5 6 19 33 43 44
MINUS                : 21
NONE                 : 25
NOT_EQUAL            : 15
NUMBER               : 31
OPEN_CURLY           : 5 6 6
PLUS                 : 20
RBRACK               : 7 36 37 40
RPAREN               : 5 6 19 33 43 44
STRING               : 24
TIMES                : 27
VARIABLE             : 7 8 9 16 19 32 40 43 44
error                : 

Nonterminals, with rules where they appear

assignment           : 2
comparison           : 5 6
conditional          : 3
exponent             : 26 27 28
expression           : 4 7 7 8 10 10 11 11 12 12 13 13 14 14 15 15 20 21 33 38 39 40 45 46
factor               : 29 30 30
flow                 : 9
flow_function_call   : 17 18
flow_functions       : 16 17
function_call        : 41
index                : 42
list                 : 34
list_elements        : 37 38
list_empty           : 35
params               : 19 44 45
statement            : 1
statements           : 5 6 6 0
string               : 23
term                 : 20 21 22 27 28

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement
    (2) statement -> . assignment
    (3) statement -> . conditional
    (4) statement -> . expression
    (7) assignment -> . VARIABLE LBRACK expression RBRACK EQUAL expression
    (8) assignment -> . VARIABLE EQUAL expression
    (9) assignment -> . VARIABLE EQUAL flow
    (5) conditional -> . IF LPAREN comparison RPAREN OPEN_CURLY statements CLOSE_CURLY
    (6) conditional -> . IF LPAREN comparison RPAREN OPEN_CURLY statements CLOSE_CURLY ELSE OPEN_CURLY statements CLOSE_CURLY
    (20) expression -> . expression PLUS term
    (21) expression -> . expression MINUS term
    (22) expression -> . term
    (23) expression -> . string
    (25) expression -> . NONE
    (26) term -> . exponent
    (27) term -> . term TIMES exponent
    (28) term -> . term DIV exponent
    (24) string -> . STRING
    (29) exponent -> . factor
    (30) exponent -> . factor EXP factor
    (31) factor -> . NUMBER
    (32) factor -> . VARIABLE
    (33) factor -> . LPAREN expression RPAREN
    (34) factor -> . list
    (35) factor -> . list_empty
    (41) factor -> . function_call
    (42) factor -> . index
    (37) list -> . LBRACK list_elements RBRACK
    (36) list_empty -> . LBRACK RBRACK
    (43) function_call -> . VARIABLE LPAREN RPAREN
    (44) function_call -> . VARIABLE LPAREN params RPAREN
    (40) index -> . VARIABLE LBRACK expression RBRACK

    VARIABLE        shift and go to state 6
    IF              shift and go to state 8
    NONE            shift and go to state 12
    STRING          shift and go to state 14
    NUMBER          shift and go to state 16
    LPAREN          shift and go to state 9
    LBRACK          shift and go to state 7

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    assignment                     shift and go to state 3
    conditional                    shift and go to state 4
    expression                     shift and go to state 5
    term                           shift and go to state 10
    string                         shift and go to state 11
    exponent                       shift and go to state 13
    factor                         shift and go to state 15
    list                           shift and go to state 17
    list_empty                     shift and go to state 18
    function_call                  shift and go to state 19
    index                          shift and go to state 20

state 1

    (0) S' -> statements .



state 2

    (1) statements -> statement .

    $end            reduce using rule 1 (statements -> statement .)
    CLOSE_CURLY     reduce using rule 1 (statements -> statement .)


state 3

    (2) statement -> assignment .

    $end            reduce using rule 2 (statement -> assignment .)
    CLOSE_CURLY     reduce using rule 2 (statement -> assignment .)


state 4

    (3) statement -> conditional .

    $end            reduce using rule 3 (statement -> conditional .)
    CLOSE_CURLY     reduce using rule 3 (statement -> conditional .)


state 5

    (4) statement -> expression .
    (20) expression -> expression . PLUS term
    (21) expression -> expression . MINUS term

    $end            reduce using rule 4 (statement -> expression .)
    CLOSE_CURLY     reduce using rule 4 (statement -> expression .)
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22


state 6

    (7) assignment -> VARIABLE . LBRACK expression RBRACK EQUAL expression
    (8) assignment -> VARIABLE . EQUAL expression
    (9) assignment -> VARIABLE . EQUAL flow
    (32) factor -> VARIABLE .
    (43) function_call -> VARIABLE . LPAREN RPAREN
    (44) function_call -> VARIABLE . LPAREN params RPAREN
    (40) index -> VARIABLE . LBRACK expression RBRACK

    LBRACK          shift and go to state 23
    EQUAL           shift and go to state 24
    EXP             reduce using rule 32 (factor -> VARIABLE .)
    TIMES           reduce using rule 32 (factor -> VARIABLE .)
    DIV             reduce using rule 32 (factor -> VARIABLE .)
    PLUS            reduce using rule 32 (factor -> VARIABLE .)
    MINUS           reduce using rule 32 (factor -> VARIABLE .)
    $end            reduce using rule 32 (factor -> VARIABLE .)
    CLOSE_CURLY     reduce using rule 32 (factor -> VARIABLE .)
    LPAREN          shift and go to state 25


state 7

    (37) list -> LBRACK . list_elements RBRACK
    (36) list_empty -> LBRACK . RBRACK
    (38) list_elements -> . list_elements COMMA expression
    (39) list_elements -> . expression
    (20) expression -> . expression PLUS term
    (21) expression -> . expression MINUS term
    (22) expression -> . term
    (23) expression -> . string
    (25) expression -> . NONE
    (26) term -> . exponent
    (27) term -> . term TIMES exponent
    (28) term -> . term DIV exponent
    (24) string -> . STRING
    (29) exponent -> . factor
    (30) exponent -> . factor EXP factor
    (31) factor -> . NUMBER
    (32) factor -> . VARIABLE
    (33) factor -> . LPAREN expression RPAREN
    (34) factor -> . list
    (35) factor -> . list_empty
    (41) factor -> . function_call
    (42) factor -> . index
    (37) list -> . LBRACK list_elements RBRACK
    (36) list_empty -> . LBRACK RBRACK
    (43) function_call -> . VARIABLE LPAREN RPAREN
    (44) function_call -> . VARIABLE LPAREN params RPAREN
    (40) index -> . VARIABLE LBRACK expression RBRACK

    RBRACK          shift and go to state 27
    NONE            shift and go to state 12
    STRING          shift and go to state 14
    NUMBER          shift and go to state 16
    VARIABLE        shift and go to state 29
    LPAREN          shift and go to state 9
    LBRACK          shift and go to state 7

    list_elements                  shift and go to state 26
    expression                     shift and go to state 28
    term                           shift and go to state 10
    string                         shift and go to state 11
    exponent                       shift and go to state 13
    factor                         shift and go to state 15
    list                           shift and go to state 17
    list_empty                     shift and go to state 18
    function_call                  shift and go to state 19
    index                          shift and go to state 20

state 8

    (5) conditional -> IF . LPAREN comparison RPAREN OPEN_CURLY statements CLOSE_CURLY
    (6) conditional -> IF . LPAREN comparison RPAREN OPEN_CURLY statements CLOSE_CURLY ELSE OPEN_CURLY statements CLOSE_CURLY

    LPAREN          shift and go to state 30


state 9

    (33) factor -> LPAREN . expression RPAREN
    (20) expression -> . expression PLUS term
    (21) expression -> . expression MINUS term
    (22) expression -> . term
    (23) expression -> . string
    (25) expression -> . NONE
    (26) term -> . exponent
    (27) term -> . term TIMES exponent
    (28) term -> . term DIV exponent
    (24) string -> . STRING
    (29) exponent -> . factor
    (30) exponent -> . factor EXP factor
    (31) factor -> . NUMBER
    (32) factor -> . VARIABLE
    (33) factor -> . LPAREN expression RPAREN
    (34) factor -> . list
    (35) factor -> . list_empty
    (41) factor -> . function_call
    (42) factor -> . index
    (37) list -> . LBRACK list_elements RBRACK
    (36) list_empty -> . LBRACK RBRACK
    (43) function_call -> . VARIABLE LPAREN RPAREN
    (44) function_call -> . VARIABLE LPAREN params RPAREN
    (40) index -> . VARIABLE LBRACK expression RBRACK

    NONE            shift and go to state 12
    STRING          shift and go to state 14
    NUMBER          shift and go to state 16
    VARIABLE        shift and go to state 29
    LPAREN          shift and go to state 9
    LBRACK          shift and go to state 7

    expression                     shift and go to state 31
    term                           shift and go to state 10
    string                         shift and go to state 11
    exponent                       shift and go to state 13
    factor                         shift and go to state 15
    list                           shift and go to state 17
    list_empty                     shift and go to state 18
    function_call                  shift and go to state 19
    index                          shift and go to state 20

state 10

    (22) expression -> term .
    (27) term -> term . TIMES exponent
    (28) term -> term . DIV exponent

    PLUS            reduce using rule 22 (expression -> term .)
    MINUS           reduce using rule 22 (expression -> term .)
    $end            reduce using rule 22 (expression -> term .)
    RBRACK          reduce using rule 22 (expression -> term .)
    COMMA           reduce using rule 22 (expression -> term .)
    RPAREN          reduce using rule 22 (expression -> term .)
    CLOSE_CURLY     reduce using rule 22 (expression -> term .)
    GREATER         reduce using rule 22 (expression -> term .)
    LESS            reduce using rule 22 (expression -> term .)
    GREATER_EQUAL   reduce using rule 22 (expression -> term .)
    LESS_EQUAL      reduce using rule 22 (expression -> term .)
    EQUAL_EQUAL     reduce using rule 22 (expression -> term .)
    NOT_EQUAL       reduce using rule 22 (expression -> term .)
    TIMES           shift and go to state 32
    DIV             shift and go to state 33


state 11

    (23) expression -> string .

    PLUS            reduce using rule 23 (expression -> string .)
    MINUS           reduce using rule 23 (expression -> string .)
    $end            reduce using rule 23 (expression -> string .)
    RBRACK          reduce using rule 23 (expression -> string .)
    COMMA           reduce using rule 23 (expression -> string .)
    RPAREN          reduce using rule 23 (expression -> string .)
    CLOSE_CURLY     reduce using rule 23 (expression -> string .)
    GREATER         reduce using rule 23 (expression -> string .)
    LESS            reduce using rule 23 (expression -> string .)
    GREATER_EQUAL   reduce using rule 23 (expression -> string .)
    LESS_EQUAL      reduce using rule 23 (expression -> string .)
    EQUAL_EQUAL     reduce using rule 23 (expression -> string .)
    NOT_EQUAL       reduce using rule 23 (expression -> string .)


state 12

    (25) expression -> NONE .

    PLUS            reduce using rule 25 (expression -> NONE .)
    MINUS           reduce using rule 25 (expression -> NONE .)
    $end            reduce using rule 25 (expression -> NONE .)
    RBRACK          reduce using rule 25 (expression -> NONE .)
    COMMA           reduce using rule 25 (expression -> NONE .)
    RPAREN          reduce using rule 25 (expression -> NONE .)
    CLOSE_CURLY     reduce using rule 25 (expression -> NONE .)
    GREATER         reduce using rule 25 (expression -> NONE .)
    LESS            reduce using rule 25 (expression -> NONE .)
    GREATER_EQUAL   reduce using rule 25 (expression -> NONE .)
    LESS_EQUAL      reduce using rule 25 (expression -> NONE .)
    EQUAL_EQUAL     reduce using rule 25 (expression -> NONE .)
    NOT_EQUAL       reduce using rule 25 (expression -> NONE .)


state 13

    (26) term -> exponent .

    TIMES           reduce using rule 26 (term -> exponent .)
    DIV             reduce using rule 26 (term -> exponent .)
    PLUS            reduce using rule 26 (term -> exponent .)
    MINUS           reduce using rule 26 (term -> exponent .)
    $end            reduce using rule 26 (term -> exponent .)
    RBRACK          reduce using rule 26 (term -> exponent .)
    COMMA           reduce using rule 26 (term -> exponent .)
    RPAREN          reduce using rule 26 (term -> exponent .)
    CLOSE_CURLY     reduce using rule 26 (term -> exponent .)
    GREATER         reduce using rule 26 (term -> exponent .)
    LESS            reduce using rule 26 (term -> exponent .)
    GREATER_EQUAL   reduce using rule 26 (term -> exponent .)
    LESS_EQUAL      reduce using rule 26 (term -> exponent .)
    EQUAL_EQUAL     reduce using rule 26 (term -> exponent .)
    NOT_EQUAL       reduce using rule 26 (term -> exponent .)


state 14

    (24) string -> STRING .

    PLUS            reduce using rule 24 (string -> STRING .)
    MINUS           reduce using rule 24 (string -> STRING .)
    $end            reduce using rule 24 (string -> STRING .)
    RBRACK          reduce using rule 24 (string -> STRING .)
    COMMA           reduce using rule 24 (string -> STRING .)
    RPAREN          reduce using rule 24 (string -> STRING .)
    CLOSE_CURLY     reduce using rule 24 (string -> STRING .)
    GREATER         reduce using rule 24 (string -> STRING .)
    LESS            reduce using rule 24 (string -> STRING .)
    GREATER_EQUAL   reduce using rule 24 (string -> STRING .)
    LESS_EQUAL      reduce using rule 24 (string -> STRING .)
    EQUAL_EQUAL     reduce using rule 24 (string -> STRING .)
    NOT_EQUAL       reduce using rule 24 (string -> STRING .)


state 15

    (29) exponent -> factor .
    (30) exponent -> factor . EXP factor

    TIMES           reduce using rule 29 (exponent -> factor .)
    DIV             reduce using rule 29 (exponent -> factor .)
    PLUS            reduce using rule 29 (exponent -> factor .)
    MINUS           reduce using rule 29 (exponent -> factor .)
    $end            reduce using rule 29 (exponent -> factor .)
    RBRACK          reduce using rule 29 (exponent -> factor .)
    COMMA           reduce using rule 29 (exponent -> factor .)
    RPAREN          reduce using rule 29 (exponent -> factor .)
    CLOSE_CURLY     reduce using rule 29 (exponent -> factor .)
    GREATER         reduce using rule 29 (exponent -> factor .)
    LESS            reduce using rule 29 (exponent -> factor .)
    GREATER_EQUAL   reduce using rule 29 (exponent -> factor .)
    LESS_EQUAL      reduce using rule 29 (exponent -> factor .)
    EQUAL_EQUAL     reduce using rule 29 (exponent -> factor .)
    NOT_EQUAL       reduce using rule 29 (exponent -> factor .)
    EXP             shift and go to state 34


state 16

    (31) factor -> NUMBER .

    EXP             reduce using rule 31 (factor -> NUMBER .)
    TIMES           reduce using rule 31 (factor -> NUMBER .)
    DIV             reduce using rule 31 (factor -> NUMBER .)
    PLUS            reduce using rule 31 (factor -> NUMBER .)
    MINUS           reduce using rule 31 (factor -> NUMBER .)
    $end            reduce using rule 31 (factor -> NUMBER .)
    RBRACK          reduce using rule 31 (factor -> NUMBER .)
    COMMA           reduce using rule 31 (factor -> NUMBER .)
    RPAREN          reduce using rule 31 (factor -> NUMBER .)
    CLOSE_CURLY     reduce using rule 31 (factor -> NUMBER .)
    GREATER         reduce using rule 31 (factor -> NUMBER .)
    LESS            reduce using rule 31 (factor -> NUMBER .)
    GREATER_EQUAL   reduce using rule 31 (factor -> NUMBER .)
    LESS_EQUAL      reduce using rule 31 (factor -> NUMBER .)
    EQUAL_EQUAL     reduce using rule 31 (factor -> NUMBER .)
    NOT_EQUAL       reduce using rule 31 (factor -> NUMBER .)


state 17

    (34) factor -> list .

    EXP             reduce using rule 34 (factor -> list .)
    TIMES           reduce using rule 34 (factor -> list .)
    DIV             reduce using rule 34 (factor -> list .)
    PLUS            reduce using rule 34 (factor -> list .)
    MINUS           reduce using rule 34 (factor -> list .)
    $end            reduce using rule 34 (factor -> list .)
    RBRACK          reduce using rule 34 (factor -> list .)
    COMMA           reduce using rule 34 (factor -> list .)
    RPAREN          reduce using rule 34 (factor -> list .)
    CLOSE_CURLY     reduce using rule 34 (factor -> list .)
    GREATER         reduce using rule 34 (factor -> list .)
    LESS            reduce using rule 34 (factor -> list .)
    GREATER_EQUAL   reduce using rule 34 (factor -> list .)
    LESS_EQUAL      reduce using rule 34 (factor -> list .)
    EQUAL_EQUAL     reduce using rule 34 (factor -> list .)
    NOT_EQUAL       reduce using rule 34 (factor -> list .)


state 18

    (35) factor -> list_empty .

    EXP             reduce using rule 35 (factor -> list_empty .)
    TIMES           reduce using rule 35 (factor -> list_empty .)
    DIV             reduce using rule 35 (factor -> list_empty .)
    PLUS            reduce using rule 35 (factor -> list_empty .)
    MINUS           reduce using rule 35 (factor -> list_empty .)
    $end            reduce using rule 35 (factor -> list_empty .)
    RBRACK          reduce using rule 35 (factor -> list_empty .)
    COMMA           reduce using rule 35 (factor -> list_empty .)
    RPAREN          reduce using rule 35 (factor -> list_empty .)
    CLOSE_CURLY     reduce using rule 35 (factor -> list_empty .)
    GREATER         reduce using rule 35 (factor -> list_empty .)
    LESS            reduce using rule 35 (factor -> list_empty .)
    GREATER_EQUAL   reduce using rule 35 (factor -> list_empty .)
    LESS_EQUAL      reduce using rule 35 (factor -> list_empty .)
    EQUAL_EQUAL     reduce using rule 35 (factor -> list_empty .)
    NOT_EQUAL       reduce using rule 35 (factor -> list_empty .)


state 19

    (41) factor -> function_call .

    EXP             reduce using rule 41 (factor -> function_call .)
    TIMES           reduce using rule 41 (factor -> function_call .)
    DIV             reduce using rule 41 (factor -> function_call .)
    PLUS            reduce using rule 41 (factor -> function_call .)
    MINUS           reduce using rule 41 (factor -> function_call .)
    $end            reduce using rule 41 (factor -> function_call .)
    RBRACK          reduce using rule 41 (factor -> function_call .)
    COMMA           reduce using rule 41 (factor -> function_call .)
    RPAREN          reduce using rule 41 (factor -> function_call .)
    CLOSE_CURLY     reduce using rule 41 (factor -> function_call .)
    GREATER         reduce using rule 41 (factor -> function_call .)
    LESS            reduce using rule 41 (factor -> function_call .)
    GREATER_EQUAL   reduce using rule 41 (factor -> function_call .)
    LESS_EQUAL      reduce using rule 41 (factor -> function_call .)
    EQUAL_EQUAL     reduce using rule 41 (factor -> function_call .)
    NOT_EQUAL       reduce using rule 41 (factor -> function_call .)


state 20

    (42) factor -> index .

    EXP             reduce using rule 42 (factor -> index .)
    TIMES           reduce using rule 42 (factor -> index .)
    DIV             reduce using rule 42 (factor -> index .)
    PLUS            reduce using rule 42 (factor -> index .)
    MINUS           reduce using rule 42 (factor -> index .)
    $end            reduce using rule 42 (factor -> index .)
    RBRACK          reduce using rule 42 (factor -> index .)
    COMMA           reduce using rule 42 (factor -> index .)
    RPAREN          reduce using rule 42 (factor -> index .)
    CLOSE_CURLY     reduce using rule 42 (factor -> index .)
    GREATER         reduce using rule 42 (factor -> index .)
    LESS            reduce using rule 42 (factor -> index .)
    GREATER_EQUAL   reduce using rule 42 (factor -> index .)
    LESS_EQUAL      reduce using rule 42 (factor -> index .)
    EQUAL_EQUAL     reduce using rule 42 (factor -> index .)
    NOT_EQUAL       reduce using rule 42 (factor -> index .)


state 21

    (20) expression -> expression PLUS . term
    (26) term -> . exponent
    (27) term -> . term TIMES exponent
    (28) term -> . term DIV exponent
    (29) exponent -> . factor
    (30) exponent -> . factor EXP factor
    (31) factor -> . NUMBER
    (32) factor -> . VARIABLE
    (33) factor -> . LPAREN expression RPAREN
    (34) factor -> . list
    (35) factor -> . list_empty
    (41) factor -> . function_call
    (42) factor -> . index
    (37) list -> . LBRACK list_elements RBRACK
    (36) list_empty -> . LBRACK RBRACK
    (43) function_call -> . VARIABLE LPAREN RPAREN
    (44) function_call -> . VARIABLE LPAREN params RPAREN
    (40) index -> . VARIABLE LBRACK expression RBRACK

    NUMBER          shift and go to state 16
    VARIABLE        shift and go to state 29
    LPAREN          shift and go to state 9
    LBRACK          shift and go to state 7

    term                           shift and go to state 35
    exponent                       shift and go to state 13
    factor                         shift and go to state 15
    list                           shift and go to state 17
    list_empty                     shift and go to state 18
    function_call                  shift and go to state 19
    index                          shift and go to state 20

state 22

    (21) expression -> expression MINUS . term
    (26) term -> . exponent
    (27) term -> . term TIMES exponent
    (28) term -> . term DIV exponent
    (29) exponent -> . factor
    (30) exponent -> . factor EXP factor
    (31) factor -> . NUMBER
    (32) factor -> . VARIABLE
    (33) factor -> . LPAREN expression RPAREN
    (34) factor -> . list
    (35) factor -> . list_empty
    (41) factor -> . function_call
    (42) factor -> . index
    (37) list -> . LBRACK list_elements RBRACK
    (36) list_empty -> . LBRACK RBRACK
    (43) function_call -> . VARIABLE LPAREN RPAREN
    (44) function_call -> . VARIABLE LPAREN params RPAREN
    (40) index -> . VARIABLE LBRACK expression RBRACK

    NUMBER          shift and go to state 16
    VARIABLE        shift and go to state 29
    LPAREN          shift and go to state 9
    LBRACK          shift and go to state 7

    term                           shift and go to state 36
    exponent                       shift and go to state 13
    factor                         shift and go to state 15
    list                           shift and go to state 17
    list_empty                     shift and go to state 18
    function_call                  shift and go to state 19
    index                          shift and go to state 20

state 23

    (7) assignment -> VARIABLE LBRACK . expression RBRACK EQUAL expression
    (40) index -> VARIABLE LBRACK . expression RBRACK
    (20) expression -> . expression PLUS term
    (21) expression -> . expression MINUS term
    (22) expression -> . term
    (23) expression -> . string
    (25) expression -> . NONE
    (26) term -> . exponent
    (27) term -> . term TIMES exponent
    (28) term -> . term DIV exponent
    (24) string -> . STRING
    (29) exponent -> . factor
    (30) exponent -> . factor EXP factor
    (31) factor -> . NUMBER
    (32) factor -> . VARIABLE
    (33) factor -> . LPAREN expression RPAREN
    (34) factor -> . list
    (35) factor -> . list_empty
    (41) factor -> . function_call
    (42) factor -> . index
    (37) list -> . LBRACK list_elements RBRACK
    (36) list_empty -> . LBRACK RBRACK
    (43) function_call -> . VARIABLE LPAREN RPAREN
    (44) function_call -> . VARIABLE LPAREN params RPAREN
    (40) index -> . VARIABLE LBRACK expression RBRACK

    NONE            shift and go to state 12
    STRING          shift and go to state 14
    NUMBER          shift and go to state 16
    VARIABLE        shift and go to state 29
    LPAREN          shift and go to state 9
    LBRACK          shift and go to state 7

    expression                     shift and go to state 37
    term                           shift and go to state 10
    string                         shift and go to state 11
    exponent                       shift and go to state 13
    factor                         shift and go to state 15
    list                           shift and go to state 17
    list_empty                     shift and go to state 18
    function_call                  shift and go to state 19
    index                          shift and go to state 20

state 24

    (8) assignment -> VARIABLE EQUAL . expression
    (9) assignment -> VARIABLE EQUAL . flow
    (20) expression -> . expression PLUS term
    (21) expression -> . expression MINUS term
    (22) expression -> . term
    (23) expression -> . string
    (25) expression -> . NONE
    (16) flow -> . VARIABLE CONNECT flow_functions
    (26) term -> . exponent
    (27) term -> . term TIMES exponent
    (28) term -> . term DIV exponent
    (24) string -> . STRING
    (29) exponent -> . factor
    (30) exponent -> . factor EXP factor
    (31) factor -> . NUMBER
    (32) factor -> . VARIABLE
    (33) factor -> . LPAREN expression RPAREN
    (34) factor -> . list
    (35) factor -> . list_empty
    (41) factor -> . function_call
    (42) factor -> . index
    (37) list -> . LBRACK list_elements RBRACK
    (36) list_empty -> . LBRACK RBRACK
    (43) function_call -> . VARIABLE LPAREN RPAREN
    (44) function_call -> . VARIABLE LPAREN params RPAREN
    (40) index -> . VARIABLE LBRACK expression RBRACK

    NONE            shift and go to state 12
    VARIABLE        shift and go to state 38
    STRING          shift and go to state 14
    NUMBER          shift and go to state 16
    LPAREN          shift and go to state 9
    LBRACK          shift and go to state 7

    expression                     shift and go to state 39
    flow                           shift and go to state 40
    term                           shift and go to state 10
    string                         shift and go to state 11
    exponent                       shift and go to state 13
    factor                         shift and go to state 15
    list                           shift and go to state 17
    list_empty                     shift and go to state 18
    function_call                  shift and go to state 19
    index                          shift and go to state 20

state 25

    (43) function_call -> VARIABLE LPAREN . RPAREN
    (44) function_call -> VARIABLE LPAREN . params RPAREN
    (45) params -> . params COMMA expression
    (46) params -> . expression
    (20) expression -> . expression PLUS term
    (21) expression -> . expression MINUS term
    (22) expression -> . term
    (23) expression -> . string
    (25) expression -> . NONE
    (26) term -> . exponent
    (27) term -> . term TIMES exponent
    (28) term -> . term DIV exponent
    (24) string -> . STRING
    (29) exponent -> . factor
    (30) exponent -> . factor EXP factor
    (31) factor -> . NUMBER
    (32) factor -> . VARIABLE
    (33) factor -> . LPAREN expression RPAREN
    (34) factor -> . list
    (35) factor -> . list_empty
    (41) factor -> . function_call
    (42) factor -> . index
    (37) list -> . LBRACK list_elements RBRACK
    (36) list_empty -> . LBRACK RBRACK
    (43) function_call -> . VARIABLE LPAREN RPAREN
    (44) function_call -> . VARIABLE LPAREN params RPAREN
    (40) index -> . VARIABLE LBRACK expression RBRACK

    RPAREN          shift and go to state 41
    NONE            shift and go to state 12
    STRING          shift and go to state 14
    NUMBER          shift and go to state 16
    VARIABLE        shift and go to state 29
    LPAREN          shift and go to state 9
    LBRACK          shift and go to state 7

    params                         shift and go to state 42
    expression                     shift and go to state 43
    term                           shift and go to state 10
    string                         shift and go to state 11
    exponent                       shift and go to state 13
    factor                         shift and go to state 15
    list                           shift and go to state 17
    list_empty                     shift and go to state 18
    function_call                  shift and go to state 19
    index                          shift and go to state 20

state 26

    (37) list -> LBRACK list_elements . RBRACK
    (38) list_elements -> list_elements . COMMA expression

    RBRACK          shift and go to state 44
    COMMA           shift and go to state 45


state 27

    (36) list_empty -> LBRACK RBRACK .

    EXP             reduce using rule 36 (list_empty -> LBRACK RBRACK .)
    TIMES           reduce using rule 36 (list_empty -> LBRACK RBRACK .)
    DIV             reduce using rule 36 (list_empty -> LBRACK RBRACK .)
    PLUS            reduce using rule 36 (list_empty -> LBRACK RBRACK .)
    MINUS           reduce using rule 36 (list_empty -> LBRACK RBRACK .)
    $end            reduce using rule 36 (list_empty -> LBRACK RBRACK .)
    RBRACK          reduce using rule 36 (list_empty -> LBRACK RBRACK .)
    COMMA           reduce using rule 36 (list_empty -> LBRACK RBRACK .)
    RPAREN          reduce using rule 36 (list_empty -> LBRACK RBRACK .)
    CLOSE_CURLY     reduce using rule 36 (list_empty -> LBRACK RBRACK .)
    GREATER         reduce using rule 36 (list_empty -> LBRACK RBRACK .)
    LESS            reduce using rule 36 (list_empty -> LBRACK RBRACK .)
    GREATER_EQUAL   reduce using rule 36 (list_empty -> LBRACK RBRACK .)
    LESS_EQUAL      reduce using rule 36 (list_empty -> LBRACK RBRACK .)
    EQUAL_EQUAL     reduce using rule 36 (list_empty -> LBRACK RBRACK .)
    NOT_EQUAL       reduce using rule 36 (list_empty -> LBRACK RBRACK .)


state 28

    (39) list_elements -> expression .
    (20) expression -> expression . PLUS term
    (21) expression -> expression . MINUS term

    RBRACK          reduce using rule 39 (list_elements -> expression .)
    COMMA           reduce using rule 39 (list_elements -> expression .)
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22


state 29

    (32) factor -> VARIABLE .
    (43) function_call -> VARIABLE . LPAREN RPAREN
    (44) function_call -> VARIABLE . LPAREN params RPAREN
    (40) index -> VARIABLE . LBRACK expression RBRACK

    EXP             reduce using rule 32 (factor -> VARIABLE .)
    TIMES           reduce using rule 32 (factor -> VARIABLE .)
    DIV             reduce using rule 32 (factor -> VARIABLE .)
    PLUS            reduce using rule 32 (factor -> VARIABLE .)
    MINUS           reduce using rule 32 (factor -> VARIABLE .)
    RBRACK          reduce using rule 32 (factor -> VARIABLE .)
    COMMA           reduce using rule 32 (factor -> VARIABLE .)
    RPAREN          reduce using rule 32 (factor -> VARIABLE .)
    $end            reduce using rule 32 (factor -> VARIABLE .)
    CLOSE_CURLY     reduce using rule 32 (factor -> VARIABLE .)
    GREATER         reduce using rule 32 (factor -> VARIABLE .)
    LESS            reduce using rule 32 (factor -> VARIABLE .)
    GREATER_EQUAL   reduce using rule 32 (factor -> VARIABLE .)
    LESS_EQUAL      reduce using rule 32 (factor -> VARIABLE .)
    EQUAL_EQUAL     reduce using rule 32 (factor -> VARIABLE .)
    NOT_EQUAL       reduce using rule 32 (factor -> VARIABLE .)
    LPAREN          shift and go to state 25
    LBRACK          shift and go to state 46


state 30

    (5) conditional -> IF LPAREN . comparison RPAREN OPEN_CURLY statements CLOSE_CURLY
    (6) conditional -> IF LPAREN . comparison RPAREN OPEN_CURLY statements CLOSE_CURLY ELSE OPEN_CURLY statements CLOSE_CURLY
    (10) comparison -> . expression GREATER expression
    (11) comparison -> . expression LESS expression
    (12) comparison -> . expression GREATER_EQUAL expression
    (13) comparison -> . expression LESS_EQUAL expression
    (14) comparison -> . expression EQUAL_EQUAL expression
    (15) comparison -> . expression NOT_EQUAL expression
    (20) expression -> . expression PLUS term
    (21) expression -> . expression MINUS term
    (22) expression -> . term
    (23) expression -> . string
    (25) expression -> . NONE
    (26) term -> . exponent
    (27) term -> . term TIMES exponent
    (28) term -> . term DIV exponent
    (24) string -> . STRING
    (29) exponent -> . factor
    (30) exponent -> . factor EXP factor
    (31) factor -> . NUMBER
    (32) factor -> . VARIABLE
    (33) factor -> . LPAREN expression RPAREN
    (34) factor -> . list
    (35) factor -> . list_empty
    (41) factor -> . function_call
    (42) factor -> . index
    (37) list -> . LBRACK list_elements RBRACK
    (36) list_empty -> . LBRACK RBRACK
    (43) function_call -> . VARIABLE LPAREN RPAREN
    (44) function_call -> . VARIABLE LPAREN params RPAREN
    (40) index -> . VARIABLE LBRACK expression RBRACK
